# eeg-headband

./: .envrc  .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
app-core/: Cargo.toml
app-core/src/: main.rs
app_core/.cargo/: config.toml
common/: Cargo.toml
firmware/app-core/: memory.x
firmware/app-core/.cargo/: config.toml
firmware/app-core/src/: bsp.rs  main.rs
firmware/common/: Cargo.toml
firmware/common/src/: lib.rs
firmware/net-core/: Cargo.toml  memory.x
firmware/net-core/src/: main.rs
firmware/xtask/: Cargo.toml
firmware/xtask/src/: commands.rs
host/: Cargo.toml  perf.data  perf.data.old
host/src/: ble_driver.rs  gui.rs  main.rs  t.rs
net-core/: Cargo.toml
net-core/.cargo/: config.toml
net-core/src/: bsp.rs  main.rs
net_core/.cargo/: config.toml
net_core/src/: main.rs
proto/: Cargo.toml  build.rs
proto/proto/: from_edge.capnp  to_edge.capnp
proto/src/: lib.rs
xtask/src/: commands.rs  main.rs
