[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = { version = "0.1.2"}
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.7.0", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }

common = { path = "../common" }


defmt = "1.0.1"
defmt-rtt = "1.0.0"

static_cell = "2"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-storage = "0.3.1"
usbd-hid = "0.9.0"
serde = { version = "1.0.136", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
heapless = { version = "0.9.2", default-features = false }

[profile.release]
debug = 2
opt-level = "z"
codegen-units = 1
lto = "fat"



