[package]
name = "openeeg-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bluest = "0.6.9"
proto = { version = "0.1.0", path = "../proto" }
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
gpui = "0.2.2"
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", rev = "aa4f896b" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git", rev = "aa4f896b" }
serde = { version = "1.0.228", features = ["derive"] }
phosphor-crt = "0.1.0"
pollster = "0.4.0"
image = "0.25.9"
small_vec = "0.1.2"
smallvec = "1.15.1"
parking_lot = "0.12.5"
